Update API endpoint to backend URL

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body>
-    <h1>📦 AI Knowledge Vault</h1>
+    <h1> AI Knowledge Hub</h1>
 
     <section>
         <h3>Create a Memory</h3>
@@ -32,7 +32,7 @@
     </section>
 
 <script>
-const API = "http://localhost:8000";
+const API = "https://memvid-demo.onrender.com";
 
 document.getElementById("createBtn").onclick = async () => {
     const docs = document.getElementById("docs").value.split("\n").filter(Boolean);
